--- a/.github/workflows/code-analisis.yml
+++ b/.github/workflows/code-analisis.yml
@@ -26,10 +26,16 @@ jobs:
       - name: Run RSpec
         run: docker run --pull always --rm "${{ secrets.DOCKER_REGISTRY_USERNAME }}/$DOCKER_PROJECT_NAME:$GITHUB_REF_NAME-$GITHUB_RUN_ID" bundle exec rspec
 
-
   run_static_code_analyser:
     runs-on: ubuntu-latest
     needs: build_and_push_docker_image
     steps:
       - name: Run rubocop (static code analyser)
         run: docker run --pull always --rm "${{ secrets.DOCKER_REGISTRY_USERNAME }}/$DOCKER_PROJECT_NAME:$GITHUB_REF_NAME-$GITHUB_RUN_ID" bundle exec rubocop
+
+  run_vulnerabilities_checker:
+    runs-on: ubuntu-latest
+    needs: build_and_push_docker_image
+    steps:
+      - name: Run bundle-audit (vulnerability checker)
+        run: docker run --pull always --rm "${{ secrets.DOCKER_REGISTRY_USERNAME }}/$DOCKER_PROJECT_NAME:$GITHUB_REF_NAME-$GITHUB_RUN_ID" bundle exec bundle-audit
